
[[pending]]
== Pending

icon:check[] Permissions: Various flaws in the admin permission handling have been fixed.

[quote]
____

* The `resetAdminPassword` command line operation will now also re-create the admin user if it can't be found.
* The admin permission is no longer bound to the `admin` role. Instead a dedicated `admin` flag can be set for users in order to grant admin privileges on a per-user basis. Mesh will automatically set the user admin flag for all users which have access to the role with the name `admin`. The permissions of the `admin` role will not be changed.
* Admin endpoints will now check for the `admin` user flag and disregard any role that has been assigned to the user.
____

icon:plus[] Elasticsearch: The `branchUuid` property was added to documents in the search index.

icon:check[] Security: A minor security issue has been fixed.

[[v1.5.2]]
== 1.5.2 (22.06.2020)

icon:check[] Config: It is now possible to configure the image cache directory path using the `MESH_IMAGE_CACHE_DIRECTORY` environment variable. Fixes link:https://github.com/gentics/mesh/issues/1067[#1067]

icon:check[] Consistency Checks: An empty binary will no longer be considered inconsistent.

icon:check[] REST: Allow field during node field update is now validated strictly in the API. Fixes link:https://github.com/gentics/mesh/issues/975[#975]

icon:check[] Core: Resolving node links to nodes in the same project and branch will now yield relative URLs, as documented.

[[v1.5.1]]
== 1.5.1 (11.05.2020)

icon:check[] Java Rest Client: `MeshRequest#toCompletable()` now throws an exception again when receiving an error from the server.

[[v1.5.0]]
== 1.5.0 (08.05.2020)

icon:plus[] Test: An enhanced test container class has been added. The `MeshContainer` class replaces the `MeshDockerServer` which was deprecated.
